<resources>
    <string name="app_name">Rent a Car</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="login">Login</string>
    <string name="login_for_continue">Login for continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">forgot password</string>
    <string name="or_login_with">or login with</string>
    <string name="login_with_gamil">Login with gamil</string>
    <string name="register">Register</string>
    <string name="register_for_continue">Register for Continue</string>
    <string name="already_have_account">already have account?</string>
    <string name="or_register_with">or register with</string>
    <string name="register_with_gmail">register with gmail</string>
    <string name="register_as">Register As</string>
    <string name="customer">customer</string>
    <string name="rent_service">Rent Service</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="save">save</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="confirm_mobile">Confirm Mobile</string>
    <string name="enter_the_code_which_sent_your_mobile">Enter the code which sent your mobile</string>
    <string name="enter_verification_code_below">Enter verification code below</string>
    <string name="verify">Verify</string>
    <string name="enter_your_service_details">Enter your service details</string>
    <string name="service_name">Service Name</string>
    <string name="address">Address</string>
    <string name="telephone">Telephone</string>
    <string name="city">City</string>
    <string name="town">Town</string>
    <string name="select_location">Select Location</string>
    <string name="profile">Profile</string>
    <string name="find_service">Find Service</string>
    <string name="manage_vehicles">Manage Vehicles</string>
    <string name="bookings">Bookings</string>
    <string name="communicate">Communicate</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="log_out">Log Out</string>
    <string name="controls">Controls</string>
    <string name="view_details"><![CDATA[View Details>>]]></string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="price">Price</string>
    <string name="register_vehicle">Register Vehicle</string>
    <string name="enter_details_for_register_vehicle">Enter details for register vehicle</string>
    <string name="brand">Brand :</string>
    <string name="model">Model :</string>
    <string name="number_of_passengers">Number of Passengers :</string>
    <string name="color">Color :</string>
    <string name="distance_per_day_km">Distance per day (km) :</string>
    <string name="price_per_day_rs">Price per day (Rs) :</string>
    <string name="price_for_extra_hour_rs">Price for extra hour (Rs) :</string>
    <string name="price_for_extra_km">Price for extra km :</string>
    <string name="description_notice_instructions">Description / notice / instructions :</string>
    <string name="images">Vehicle Images</string>
    <string name="set_availability">Set Availability</string>
    <string name="edit">Edit</string>
    <string name="hide_from_search_list">Hide From Search List</string>
    <string name="delete_vehicle">Delete Vehicle</string>
    <string name="check_availability">Check Availability</string>
    <string name="booking_description">Booking Description</string>
    <string name="booked_by">Booked By</string>
    <string name="discover_customer_profile">Discover Customer Profile</string>
    <string name="see_more_about_vehicle">See More About Vehicle</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="call">Call</string>
    <string name="see_vehicle">See Vehicle</string>
    <string name="customer_feedback">Customer Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="see_more">See More</string>
    <string name="booking_details">Booking Details</string>
    <string name="available">Available</string>
    <string name="not_available">Not Available</string>
    <string name="search">Search</string>
    <string name="discover_service_profile">Discover Service Profile</string>
    <string name="don_t_have_an_account">don\'t have an account?</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_maps">Map</string>
    <string name="who_want_to_be_you">Who want to be you?</string>
    <string name="rent_history">Rent History</string>
    <string name="no_registered_vehicles">No Registered Vehicles</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="edit_vehicle_details">Edit Vehicle Details</string>
    <string name="main_name">Rent a Car</string>
    <string name="select_district">Select District</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="select_town">Select Town</string>
    <string name="service_not_found">Service not found</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="please_check_whether_vehicle_available_or_not_before_booking">Please check whether vehicle available or not, before booking</string>
    <string name="check_vehicle_availability">Check Vehicle Availability</string>
    <string name="book_vehicle">Book Vehicle</string>
    <string name="vehicle">Vehicle</string>
    <string name="current_location_selected">Current location selected</string>
    <string name="your_selected_location">Your selected location</string>
    <string name="default_notification_channel_id">111</string>
    <string name="channel_description">This is a notification channel</string>
    <string name="notification_channel">Channel_Name_RentACar</string>
</resources>
