<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_find_service"
            android:icon="@drawable/ic_search"
            android:title="@string/find_service"
            app:itemIconTint="@color/colorPrimaryDark"/>

        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_person"/>

        <item
            android:id="@+id/nav_manage_vehicles"
            android:icon="@drawable/ic_car"
            android:title="@string/manage_vehicles" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/ic_book"
            android:title="@string/bookings" />

        <item
            android:id="@+id/nav_rent_history"
            android:icon="@drawable/ic_history"
            android:title="@string/rent_history" />
    </group>

    <item android:title="@string/communicate"
        android:checkable="true">
        <menu>
            <item
                android:id="@+id/nav_notification"
                android:icon="@drawable/ic_notifications"
                android:title="@string/notifications"
                android:checkable="true"/>
            <item
                android:id="@+id/nav_message"
                android:icon="@drawable/ic_chat"
                android:title="@string/messages"
                android:checkable="true"/>
        </menu>
    </item>

    <item android:title="@string/controls">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/log_out" />
             />
        </menu>
    </item>

</menu>
